<resources>
    <string name="app_name">CocktailDB</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_first_screen_text">Это форк тестового задания Kazan-Express.</string>
    <string name="onboarding_second_screen_text">Я сделал это тестовое задание что бы пополнить портфолио.</string>
    <string name="onboarding_third_screen_text">Это небольшое приложение использует The CocktailDB API.</string>
    <string name="onboarding_button_text">Finish</string>
    <string name="cocktail_picture_description">cocktail picture</string>
    <string name="cocktail_name_field">Name</string>
    <string name="cocktail_name_value">Name value</string>
    <string name="id_field_text">Id</string>
    <string name="id_value_text">id number</string>
    <string name="category_field_text">Category</string>
    <string name="category_value_text">Ordinary drink</string>
    <string name="type_field_text">Type</string>
    <string name="type_value_text">Alcoholic</string>
    <string name="glass_type_field_text">Glass type</string>
    <string name="glass_type_value_text">Old-fashioned glass</string>
    <string name="cocktail_ingredients_header">Ingredients</string>
    <string name="how_to">How to</string>
    <string name="loading_title">Loading...</string>
    <string name="id_placeholder">ID: 000000</string>
    <string name="cocktail_name_placeholder">Long cocktail name</string>
    <string name="like_cocktail_button_content_discription">Like cocktail</string>
    <string name="visited_cocktail_image_content_description">Cocktail image</string>
    <string name="menu_favourites_title">Favourites</string>
    <string name="menu_category_title">Search by category</string>
    <string name="menu_search_title">Search</string>
</resources>