<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.FragmentCocktail">

    <ImageView

        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_corners_rounded"
        android:contentDescription="@string/cocktail_picture_description"

        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/id_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_field_text"
        app:layout_constraintBottom_toTopOf="@+id/name_field"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_value_text"
        app:layout_constraintStart_toEndOf="@id/guideline_center"
        app:layout_constraintTop_toTopOf="@id/id_field" />

    <TextView
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocktail_name_field"
        app:layout_constraintBottom_toTopOf="@+id/category_field"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/id_field" />

    <TextView
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocktail_name_value"
        app:layout_constraintStart_toEndOf="@id/guideline_center"
        app:layout_constraintTop_toTopOf="@id/name_field" />

    <TextView
        android:id="@+id/category_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_field_text"
        app:layout_constraintBottom_toTopOf="@+id/type_field"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/name_field" />

    <TextView
        android:id="@+id/category_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_value_text"
        app:layout_constraintStart_toEndOf="@id/guideline_center"
        app:layout_constraintTop_toTopOf="@id/category_field" />

    <TextView
        android:id="@+id/type_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_field_text"
        app:layout_constraintBottom_toTopOf="@+id/glass_type_field"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/category_field" />

    <TextView
        android:id="@+id/type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_value_text"
        app:layout_constraintStart_toEndOf="@id/guideline_center"
        app:layout_constraintTop_toTopOf="@id/type_field" />

    <TextView
        android:id="@+id/glass_type_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glass_type_field_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/type_field" />

    <TextView
        android:id="@+id/glass_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glass_type_value_text"
        app:layout_constraintStart_toEndOf="@id/guideline_center"
        app:layout_constraintTop_toTopOf="@id/glass_type_field" />

</androidx.constraintlayout.widget.ConstraintLayout>